edited pr build
Signed-off-by: dhruv <dhruvj797@gmail.com>

--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -16,9 +16,7 @@ jobs:
             
             - name: Build openapi2beans
               run: |
-               docker run --rm -v ${{ github.workspace }}:/workspace/git ghcr.io/jaydee029/openapi2beans:main generate --yaml /workspace/git/${{ env.YAML_LOCATION }} \  
-               --output /workspace/git/${{ env.OUTPUT_LOCATION }} \ 
-               --package ${{ env.PACKAGE }}
+               docker run --rm -v ${{ github.workspace }}:/workspace/git ghcr.io/jaydee029/openapi2beans:main generate --yaml /workspace/git/${{ env.YAML_LOCATION }} --output /workspace/git/${{ env.OUTPUT_LOCATION }} --package ${{ env.PACKAGE }}
 
               env:
                 YAML_LOCATION: "galasa-parent/dev.galasa.framework.api.openapi/src/main/build/openapi.yaml"  # Update this path
