added build workflow and dockerfiles
Signed-off-by: dhruv <dhruvj797@gmail.com>

--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -34,7 +34,7 @@ jobs:
                 OUTPUT_LOCATION: "generated-beans"
                 PACKAGE: "generated.beans"
             
-            - name: Test and Build Gradle
+            - name: Test and Build Framework
               run: |
                gradle -b galasa-parent/build.gradle clean build \
                -PsourceMaven=https://repo.maven.apache.org/maven2/  \
