--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,6 +41,7 @@ jobs:
             
             - name: Test, Build and Publish Framework
               env:
+                GITHUB_ACTOR: ${{github.actor}}
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 ORG_GRADLE_PROJECT_signingKeyId:  ${{ secrets.GPG_KEY }}
                 ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_SECRET }}
