Add /openapi route to serve YAML or JSON OpenAPI spec
Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

--- a/release.yaml
+++ b/release.yaml
@@ -207,6 +207,15 @@ api:
     isolated:     true
     codecoverage: false
 
+  - artifact: dev.galasa.framework.api.openapi.servlet
+    version: 0.36.0
+    obr:          true
+    mvp:          false
+    bom:          false
+    javadoc:      false
+    isolated:     true
+    codecoverage: true
+
   - artifact: dev.galasa.framework.api.ras
     version: 0.34.0
     obr:          true
