--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -334,8 +334,8 @@ publishing {
 
             if ("$targetMaven".startsWith('http')) {
                 credentials {
-                    username System.getenv("GITHUB_ACTOR")
-                    password System.getenv("GITHUB_TOKEN")
+                    username System.getenv('GITHUB_ACTOR')
+                    password System.getenv('GITHUB_TOKEN')
                 }
             }
         }
