--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,4 @@ temp/
 
 # Ignore the OpenAPI spec that is automatically placed into the 
 # resources folder to be served up by the OpenAPI servlet
-**/dev.galasa.framework.api.openapi.servlet/**/resources/openapi.yaml
+**/dev.galasa.framework.api.openapi.servlet/**/openapi.yaml
