Add /openapi endpoint to serve the API server's OpenAPI spec (#592)
* Add /openapi route to serve YAML or JSON OpenAPI spec

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

* Add separate error message for missing Content-Type header

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

* Ensure openapi.yaml is copied after the dev.galasa.api.openapi project is rebuilt

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

* Add 500 server error to /openapi route

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

* Formatting

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

* Add 'Accept' header handling to determine response content type

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

* Update OpenAPI error description and example

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

---------

Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ docs/generated/
 # A folder scripts can put things into without fear of them being checked-in.
 temp/
 *.proto
+
+# Ignore the OpenAPI spec that is automatically placed into the 
+# resources folder to be served up by the OpenAPI servlet
+**/dev.galasa.framework.api.openapi.servlet/**/openapi.yaml
