Running Dhruv's workflow in galasa-dev org
Signed-off-by: Jade Carino <carino_jade@yahoo.co.uk>

--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -12,6 +12,10 @@ plugins {
 version = "0.36.0"
 
 signing {
+    def signingKeyId = findProperty("signingKeyId")
+    def signingKey = findProperty("signingKey")
+    def signingPassword = findProperty("signingPassword")
+    useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
     sign publishing.publications
 }
 
@@ -330,8 +334,8 @@ publishing {
 
             if ("$targetMaven".startsWith('http')) {
                 credentials {
-                    username System.getenv('MAVENUSERNAME')
-                    password System.getenv('MAVENPASSWORD')
+                    username System.getenv('GITHUB_ACTOR')
+                    password System.getenv('GITHUB_TOKEN')
                 }
             }
         }
