Update job names so clearer
Signed-off-by: Jade Carino <carino_jade@yahoo.co.uk>

--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -11,8 +11,8 @@ env:
     IMAGE_TAG: main 
 
 jobs:
-    Build-using-openapi2beans-and-gradle:
-        name: Build framework using openapi2beans and gradle
+    build-framework:
+        name: Build Framework using openapi2beans and Gradle
         runs-on: ubuntu-latest
 
         steps:
