--- a/galasa-parent/buildSrc/src/main/groovy/galasa.java.gradle
+++ b/galasa-parent/buildSrc/src/main/groovy/galasa.java.gradle
@@ -29,6 +29,10 @@ repositories {
 }
 
 signing {
+    // def signingKeyId = findProperty("signingKeyId")
+    // def signingKey = findProperty("signingKey")
+    // def signingPassword = findProperty("signingPassword")
+    // useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
     sign publishing.publications
 }
 
@@ -108,6 +112,8 @@ publishing {
                 credentials {
                     username System.getenv('MAVENUSERNAME')
                     password System.getenv('MAVENPASSWORD')
+                    // username System.getenv('GITHUB_ACTOR')
+                    // password System.getenv('GITHUB_TOKEN')
                 }
             }
         }
