--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,8 +11,8 @@ env:
     IMAGE_TAG: main 
 
 jobs:
-    Build-using-openapi2beans-and-gradle:
-        name: Build framework using openapi2beans and gradle
+    build-framework:
+        name: Build Framework using openapi2beans and Gradle
         runs-on: ubuntu-latest
 
         steps:
@@ -53,8 +53,8 @@ jobs:
                -PjacocoEnabled=true \
                -PisMainOrRelease=true
 
-    Build-Documentation:
-        name: Build framework using openapi2beans and gradle
+    build-restapidocsite:
+        name: Build REST API Doc site using Swagger and Docker
         runs-on: ubuntu-latest
 
         steps:
