--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,6 +34,10 @@ jobs:
               run: | 
                echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
+            - name: Pull openapi2beans image
+              run: |
+               docker pull ghcr.io/galasa-dev/openapi2beans:main
+
             - name: Build openapi2beans
               run: |
                docker run --rm -v ${{ github.workspace }}:/var/workspace ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/openapi2beans:${{ env.IMAGE_TAG }} generate --yaml var/workspace/${{ env.YAML_LOCATION }} --output var/workspace/${{ env.OUTPUT_LOCATION }} --package ${{ env.PACKAGE }}
