--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -33,6 +33,10 @@ jobs:
             - name: Log into GitHub Container Registry
               run: | 
                echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+            
+            - name: Pull openapi2beans image
+              run: |
+               docker pull ghcr.io/galasa-dev/openapi2beans:main
 
             - name: Build openapi2beans
               run: |
