--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -30,9 +30,9 @@ jobs:
               with:
                 gradle-version: 6.9.2
 
-            # - name: Log into GitHub Container Registry
-            #   run: | 
-            #    echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+            - name: Log into GitHub Container Registry
+              run: | 
+               echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
             
             # - name: Pull openapi2beans image
             #   run: |
