Add signing info into the galasa.java.gradle file
Signed-off-by: Jade Carino <carino_jade@yahoo.co.uk>

--- a/galasa-parent/buildSrc/src/main/groovy/galasa.java.gradle
+++ b/galasa-parent/buildSrc/src/main/groovy/galasa.java.gradle
@@ -29,10 +29,10 @@ repositories {
 }
 
 signing {
-    // def signingKeyId = findProperty("signingKeyId")
-    // def signingKey = findProperty("signingKey")
-    // def signingPassword = findProperty("signingPassword")
-    // useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
+    def signingKeyId = findProperty("signingKeyId")
+    def signingKey = findProperty("signingKey")
+    def signingPassword = findProperty("signingPassword")
+    useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
     sign publishing.publications
 }
 
@@ -110,10 +110,8 @@ publishing {
 
             if ("$targetMaven".startsWith('http')) {
                 credentials {
-                    username System.getenv('MAVENUSERNAME')
-                    password System.getenv('MAVENPASSWORD')
-                    // username System.getenv('GITHUB_ACTOR')
-                    // password System.getenv('GITHUB_TOKEN')
+                    username System.getenv('GITHUB_ACTOR')
+                    password System.getenv('GITHUB_TOKEN')
                 }
             }
         }
