--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
     REGISTRY: ghcr.io
-    NAMESPACE: jaydee029
+    NAMESPACE: galasa-dev
     IMAGE_TAG: main 
     
 jobs:
@@ -24,6 +24,10 @@ jobs:
               with:
                 java-version: '11'
                 distribution: 'semeru'
+            
+            - name: Print githash
+              run: |
+                echo $GITHUB_SHA > ./framework.githash
               
             - name: Setup Gradle
               uses: gradle/actions/setup-gradle@v3
@@ -51,7 +55,35 @@ jobs:
                -Dorg.gradle.jvmargs=-Xmx5120M \
                -PsourceMaven=https://repo.maven.apache.org/maven2/  \
                -PcentralMaven=https://repo.maven.apache.org/maven2/ \
-               -PtargetMaven=https://maven.pkg.github.com/${{env.NAMESPACE}}/framework/  -PjacocoEnabled=true -PisMainOrRelease=true
+               -PtargetMaven=${{ github.workspace }}/repo  -PjacocoEnabled=true -PisMainOrRelease=true
+              
+            - name: Login to Github Container Registry
+              uses: docker/login-action@v3
+              with:
+                registry: ${{ env.REGISTRY }}
+                username: ${{ github.actor }}
+                password: ${{ secrets.GITHUB_TOKEN }}
+       
+            - name: Extract metadata for Gradle image
+              id: metadata
+              uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+              with:
+                images: ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/framework-maven-artefacts
+       
+             # A Docker image containing the built Maven artefacts is deployed to the dev Maven registry
+            - name: Build Gradle image for development Maven registry
+              id: build
+              uses: docker/build-push-action@v5
+              with:
+                context: .
+                file: dockerfiles/framework.gradle
+                push: true
+                tags: ${{ steps.metadata.outputs.tags }}
+                labels: ${{ steps.metadata.outputs.labels }}
+                   # Temporary: dockerRepository will change to ghcr.io once the Wrapping image is available there
+                build-args: |
+                  dockerRepository=harbor.galasa.dev
+                  tag=${{ env.IMAGE_TAG }}
                
             
     Build-Documentation:
