--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,9 +1,8 @@
 name: Main Build
 
 on:
-    workflow_dispatch:
-    pull_request:
-        branches: [main]
+  push:
+     branches: [main]
 
 env:
     REGISTRY: ghcr.io
@@ -82,7 +81,13 @@ jobs:
                 build-args: |
                   dockerRepository=harbor.galasa.dev
                   tag=${{ env.IMAGE_TAG }}
-               
+            
+            - name: Recycle application in ArgoCD
+              env: 
+                  ARGOCD_AUTH_TOKEN: ${{ secrets.ARGOCD_TOKEN }}
+              run: |
+                  docker run --env ARGOCD_AUTH_TOKEN=${{ env.ARGOCD_AUTH_TOKEN }} --rm -v ${{ github.workspace }}:/var/workspace ghcr.io/galasa-dev/argocdcli:main app actions run main-maven-repos restart --kind Deployment --resource-name framework-main --server argocd.galasa.dev
+                    
             
     Build-Documentation:
         name: Build framework using openapi2beans and gradle
