--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,11 +36,10 @@ jobs:
             - name: Build openapi2beans
               run: |
                docker run --rm -v ${{ github.workspace }}:/var/workspace ghcr.io/${{env.NAMESPACE}}/openapi2beans:main generate --yaml var/workspace/${{ env.YAML_LOCATION }} --output var/workspace/${{ env.OUTPUT_LOCATION }} --package ${{ env.PACKAGE }}
-
               env:
                 YAML_LOCATION: "galasa-parent/dev.galasa.framework.api.openapi/src/main/resources/openapi.yaml"  # Update this path
-                OUTPUT_LOCATION: "generated-beans"
-                PACKAGE: "generated.beans"
+                OUTPUT_LOCATION: "galasa-parent/dev.galasa.framework.api.beans/src/main/java"
+                PACKAGE: "dev.galasa.framework.api.beans.generated"
             
             - name: Test, Build and Publish Framework
               env:
@@ -52,7 +51,7 @@ jobs:
               run: |
                gradle -b galasa-parent/build.gradle check publish \
                -Dorg.gradle.jvmargs=-Xmx5120M \
-               -PsourceMaven=https://repo.maven.apache.org/maven2/  \
+               -PsourceMaven=https://development.galasa.dev/gh/maven-repo/maven/  \
                -PcentralMaven=https://repo.maven.apache.org/maven2/ \
                -PtargetMaven=${{ github.workspace }}/repo  -PjacocoEnabled=true -PisMainOrRelease=true
               
@@ -105,7 +104,7 @@ jobs:
             
             - name: Install swagger cli
               run: |
-               wget https://repo1.maven.org/maven2/io/swagger/swagger-codegen-cli/3.0.0-rc0/swagger-codegen-cli-3.0.0-rc0.jar -O swagger-codegen-cli.jar
+               wget https://repo1.maven.org/maven2/io/swagger/codegen/v3/swagger-codegen-cli/3.0.41/swagger-codegen-cli-3.0.41.jar -O swagger-codegen-cli.jar
             
             - name: Generate Swagger docs
               run: |
@@ -122,14 +121,13 @@ jobs:
               id: metadata
               uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
               with:
-                images: ${{env.REGISTRY}}/${{env.NAMESPACE}}/restapidoc
+                images: ${{env.REGISTRY}}/${{env.NAMESPACE}}/restapidocsite
                       
-               
             - name: Build and push Restapidoc Image
               uses: docker/build-push-action@v5
               with:
                 context: .
-                file: dockerfiles/dockerfile
+                file: dockerfiles/dockerfile.restapidocsite
                 push: true
                 tags: ${{ steps.metadata.outputs.tags }}
                 labels: ${{ steps.metadata.outputs.labels }}     
