--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -33,18 +33,17 @@ jobs:
             
             - name: Build openapi2beans
               run: |
-               docker run --rm -v ${{ github.workspace }}:/var/workspace ghcr.io/jaydee029/openapi2beans:main generate --yaml var/workspace/${{ env.YAML_LOCATION }} --output var/workspace/${{ env.OUTPUT_LOCATION }} --package ${{ env.PACKAGE }}
-
+               docker run --rm -v ${{ github.workspace }}:/var/workspace ghcr.io/${{env.NAMESPACE}}/openapi2beans:main generate --yaml var/workspace/${{ env.YAML_LOCATION }} --output var/workspace/${{ env.OUTPUT_LOCATION }} --package ${{ env.PACKAGE }}
               env:
                 YAML_LOCATION: "galasa-parent/dev.galasa.framework.api.openapi/src/main/resources/openapi.yaml"  # Update this path
-                OUTPUT_LOCATION: "generated-beans"
-                PACKAGE: "generated.beans"
+                OUTPUT_LOCATION: "galasa-parent/dev.galasa.framework.api.beans/src/main/java"
+                PACKAGE: "dev.galasa.framework.api.beans.generated"
             
             - name: Test and Build Framework
               run: |
                gradle -b galasa-parent/build.gradle check publish \
                -Dorg.gradle.jvmargs=-Xmx5120M \
-               -PsourceMaven=https://repo.maven.apache.org/maven2/  \
+               -PsourceMaven=https://development.galasa.dev/gh/maven-repo/maven/  \
                -PcentralMaven=https://repo.maven.apache.org/maven2/ \
                -PtargetMaven=${{ github.workspace }}/repo
                
