--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -38,6 +38,9 @@ allprojects {
         gradlePluginPortal()
         mavenLocal()
         maven {
+            url "https://development.galasa.dev/main/maven-repo/maven/"
+        }
+        maven {
             url "https://development.galasa.dev/gh/maven-repo/maven/"
         }
         mavenCentral()
